[package]
name = "bors"
version = "0.0.0"
authors = ["Jack Moffitt <metajack@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bytes = "0.4"
env_logger = "0.7.1"
futures = { version = "=0.3.0-alpha.19", package = "futures-preview" }
graphql_client = "0.8.0"
hyper = { version = "=0.13.0-alpha.4", features = ["unstable-stream"] }
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.29.2"
structopt = "0.3.4"
thiserror = "1.0.5"
tokio = "=0.2.0-alpha.6"
toml = "0.5.5"
