[package]
name = "bors"
version = "0.0.0"
authors = ["Jack Moffitt <metajack@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bytes = "0.5"
env_logger = "0.7.1"
futures = "0.3"
graphql_client = "0.8.0"
hyper = "0.13"
hyper-tls = "0.4"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.29.2"
structopt = "0.3.4"
thiserror = "1.0.5"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.5"
