[package]
name = "bors"
version = "0.0.0"
authors = ["Jack Moffitt <metajack@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
async-trait = "0.1.24"
bytes = "0.5"
env_logger = "0.7.1"
futures = "0.3"
graphql_client = "0.9.0"
hmac-sha1 = "0.1.3"
hex = "0.4.2"
hotpot-db = "0.0.2"
hyper = "0.13"
hyper-tls = "0.4"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
reqwest = { version = "0.10", features = ["json"] }
structopt = "0.3.11"
thiserror = "1.0.11"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.6"
