[package]
name = "bors"
version = "0.0.0"
authors = ["Jack Moffitt <metajack@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.24"
env_logger = "0.7.1"
futures = "0.3"
github = { path = "../github", features = ["graphql"] }
graphql_client = "0.9.0"
hotpot-db = "0.0.2"
log = "0.4.8"
probot = { path = "../probot" }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.11"
thiserror = "1.0.11"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.6"
