[package]
name = "bors"
version = "0.0.0"
authors = ["Jack Moffitt <metajack@fb.com>", "Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "0.5"
env_logger = "0.7.1"
futures = "0.3"
github = { path = "../github", features = ["graphql"] }
graphql_client = "0.9.0"
hyper = "0.13"
hyper-tls = "0.4"
reqwest = "0.10.5"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
structopt = "0.3.11"
thiserror = "1.0.11"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.6"
