[package]
name = "github"
version = "0.0.0"
authors = ["Brandon Williams <bmwill@fb.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bytes = "0.5"
hex = "0.4.2"
hmac-sha1 = "0.1.3"
log = "0.4.8"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.11"
url = "2.1"

[dev-dependencies]
env_logger = "0.7"
tokio = { version = "0.2", features = ["full"] }
